# a1

./: .gitbook.yaml  .gitignore  CONTRIBUTING.md  LICENSE  QUICKREF.md  README.md  pyproject.toml  pytest.ini  test_readme_example.py  test_real_integrations.py  test_retry_strategy.py
docs/: README.md  docs.json
docs/advanced/: criteria.md  observability.md  retry.md  serialization.md  strategies.md
docs/api/: builtin-tools.md  models.md  runtime.md
docs/getting-started/: concepts.md  installation.md  quick-start.md  quick-start.mdx
docs/guide/: agents.md  compilation.md  context.md  llm.md  rag.md  skills.md  skills.mdx  tools.md  tools.mdx
examples/: README.md  readme_example.py  router_config.py  router_schema.json  simple_agent.py
src/a1/: __init__.py  builtin_tools.py  cfg_builder.py  cli.py  code_utils.py  codecheck.py  codecost.py  codefix.py  codegen.py  context.py  context_utils.py  em.py  embeddings_utils.py  executor.py  extra_codecheck.py  extra_strategies.py  llm.py  models.py  rag.py  rag_router.py  runtime.py  schema_utils.py  serialization.py  strategies.py
src/a1/models/: __init__.py  agent.py  message.py  skill.py  tool.py  (+2 more)
tests/: conftest.py  test_cfg_builder.py  test_code_normalization.py  test_codecheck.py  test_codecost.py  test_constant_extractor.py  test_context_persistence.py  test_context_retry_hygiene.py  test_criteria.py  test_field_constraints.py  test_filesystem_database_rag.py  test_generation_modes.py  test_integration_demo.py  test_integration_llm.py  test_integrations.py  test_isfunction.py  test_llm_message_formats.py  test_llm_real.py  test_llm_structured_output.py  test_mcp_live.py  test_models.py  test_nested_schemas.py  test_openapi_integration.py  test_openapi_live.py  test_primitives_and_complex.py  test_rag_sql_and_filesystem.py  test_readme_example_aot_jit.py  test_runtime_complete.py  test_runtime_persistence.py  test_serialization.py  test_skills.py  test_strategy_application.py  test_strategy_fields.py  test_string_input.py  test_tool_decorator_and_functions.py  test_tool_execution.py  test_tool_naming.py
(+1 files in other folders)
